[package]
name = "yew-dom-attributes"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-events = "0.1.2"
strum = {version = "0.24.1", features = ["strum_macros", "derive"]}
wasm-bindgen = { version = "0.2.82", features = []}
web-sys = { version = "0.3.59", features = ["Element"]}
yew = "0.19.3"
domatt = { path = "../domatt" }

[features]
events = []
aria_props = ["events", "html_element_props"]
attribute_collection = ["events"]
anchor_props = ["events", "html_element_props", "aria_props", "custom_attributes"]
html_element_props = ["events"]
custom_attributes = []
button_props = []
custom_props = []
svg_props = []
full = [
    "aria_props",
    "attribute_collection",
    "anchor_props",
    "events",
    "custom_attributes",
    "button_props",
    "custom_props",
    "svg_props"
]
default = [
    "aria_props",
    "attribute_collection",
    "anchor_props",
    "html_element_props",
    "custom_attributes",
    "button_props",
    "custom_props",
    "svg_props"
    ]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[lib]
crate-type = ["rlib", "cdylib"]